fixed changing task color unhide hidden buttons on big screen and fixed task sort modal z-index bug on mobile screen

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -471,6 +471,10 @@ input::-webkit-input-placeholder {
   font-family: Comfortaa;
 }
 
+.ql-container {
+  font-size: 18px !important;
+}
+
 .ql-toolbar {
   background-color: #f2f2f2;
   border: none !important;
